Removed some old projects and updated images

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -372,7 +372,7 @@ input, select, textarea {
 		}
 
 		.row > .col-4 {
-			width: 33.33333%;
+			width: 50%;
 		}
 
 		.row > .off-4 {
@@ -1954,6 +1954,7 @@ input, select, textarea {
 			left: 2em;
 			top: 2em;
 			margin: -4em 0 4em -4em;
+			padding: 1%;
 			width: auto;
 		}
 
